math-core/tests/snapshots/conversion_test__text_diacritics_multiple.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\text{\\'{aa} \\`{aa}}"
---
<math>
    <mtext>áa àa</mtext>
</math>
