math-core/tests/snapshots/conversion_test__text_diacritics_no_braces.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\text{\\'a \\`a \\\"a \\^a}"
---
<math>
    <mtext>á à ä â</mtext>
</math>
