math-core/tests/snapshots/conversion_test__text_multi_space.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\text{x   y}"
---
<math>
    <mtext>x y</mtext>
</math>
