math-core/tests/snapshots/conversion_test__text_nested.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\text{ \\text{a}}"
---
<math>
    <mtext> a</mtext>
</math>
